examples/mood/tests/evaluate/construct_struct_missing_fields.mood.expected
-----------------
INPUT
----------------- 
struct Foo {
  a: i32,
  b: i32,
  c: i32,
}

pub fn test(): i32 {
    Foo { a: 1_i32 };
    0_i32
}
-----------------
OUTPUT
-----------------
Error: Missing struct field(s): "b", "c".:
 --> construct_struct_missing_fields.mood:8:20

  | pub fn test(): i32 {
8 |     Foo { a: 1_i32 };
  |                    ^ "Foo" is missing the field(s) "b", "c".
  |     0_i32
